@@ -1,3 +1,8 @@
+1998-07-03  Jim Meyering  <meyering@ascend.com>
+
+	* regex.m4 (jm_WITH_REGEX): New file and macro.
+	* jm-macros.m4: Require the new macro.
+
 1998-06-29  Jim Meyering  <meyering@ascend.com>
 
 	* fstypename.m4: Include sys/param.h.  NetBSD 1.3.1 requires this
